--- a/scribbletex/src/App.css
+++ b/scribbletex/src/App.css
@@ -4,7 +4,8 @@
 
 .canvas, .placeholder-text {
   
-  padding: 200px;
+  padding: 20px;
+  padding-left: 80px;
 }
 
 .canvas {
@@ -20,13 +21,22 @@
   100% {opacity: 1;}
 }
 
-.placeholder-text p:after {
-  content: '|'; /* the cursor */
-  animation: blink 1s infinite;
-  margin-left: 100px; /* Adjust as needed */
-  font-size: 100px;
+
+.placeholder-text {
+  margin-top: 0px;
+  margin-left: 80px; /* Adjust as needed */
+  font-size: 12;
+  text-align: left;
 }
 
+.tab {
+  display: inline-block;
+  margin-left: 4em;
+}
+
+.double_tab {
+  margin-left: 6em;
+}
 
 .spacer {
   size: 50px /* Adjust as needed */
@@ -104,6 +114,7 @@
 
 
 .latex-container {
+  margin-top: 50px;
   width: 50%;
   height: 300px;
   background-color:  #6b8fd5;
