visually fixed up the server side writing

--- a/Server/src/App.css
+++ b/Server/src/App.css
@@ -4,7 +4,7 @@
 
 .canvas, .placeholder-text {
   
-  padding-left: 80px;
+  padding-left: 10px;
 }
 
 .canvas {
@@ -46,32 +46,29 @@
 }
 
 .App {
+  background-color: #4e5564;
   text-align: center;
-  display: flex;
+  display: block;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #282c34; 
+  overflow: hidden; /* Hide the pesky white bar on top*/
 }
 
 
 
 .title {
   font-family: 'Orbitron', sans-serif;
-  font-size: 1.5em;
-  margin: 0.5em;
+  font-size: 1.25em;
   color: #61dafb;
-  margin-top: 2em;
-  
 }
 
 
 .App-logo {
-  height: 40vmin;
+  height: auto;
   pointer-events: none;
   color:#61dafb;
-  height: 400px;
-  width: 300px;
+  height: 30px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -90,15 +87,19 @@
 }
 
 
+Copy code
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start; /* changed from center to flex-start */
+  justify-content: flex-start; /* changed from center to flex-start */
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-top: 20px; /* add some padding at the top */
+  padding-left: 20px; /* add some padding on the left */
 }
 
 .test-image {
@@ -149,3 +150,5 @@
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
+
+
